# latent-human-dynamics-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  dynamics.yaml  experiments.yaml  model.yaml  perturbations.yaml
docs/: figure_gallery.md  state_taxonomy.md
experiments/ablations/: no_climate.yaml  no_environmental_forcing.yaml  no_latent_smoothness.yaml  no_missingness.yaml  no_personal_baseline.yaml  no_uncertainty.yaml
notebooks/: 01_generate_synthetic_cohort.ipynb  02_latent_state_geometry.ipynb  03_train_dynamics_model.ipynb  04_regime_shift_detection.ipynb  05_counterfactual_perturbations.ipynb  06_energy_landscape_visualization.ipynb
paper/: abstract.md  data_card.md  ethics.md  limitations.md  mechanistic_formalism.md  methods.md  model_card.md  preprint_outline.md  reviewer_response_simulation.md
results/: model_leaderboard.csv
scripts/: compare_to_synthetic.py  generate_figures.py  ingest_studentlife.py  launch_dashboard.py  run_perturbation_demo.py  run_pipeline.py  smoke_test.py  train_dynamics_model.py
src/adapters/: __init__.py  apple_health_adapter.py  garmin_adapter.py  studentlife_adapter.py  weather_adapter.py  wesad_adapter.py
src/api/: __init__.py  main.py  schemas.py
src/counterfactuals/: __init__.py  intervention_simulator.py  perturbation_engine.py  trajectory_comparator.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  preprocessing.py  synthetic_generator.py  validation.py
src/dynamics/: __init__.py  forcing_functions.py  neural_ode.py  resilience_model.py  (+1 more)
tests/: conftest.py  test_api.py  test_counterfactuals.py  test_dynamics.py  test_evaluation.py  test_feature_engineering.py  test_latent_states.py  test_safety.py  test_synthetic_generator.py
(+35 files in other folders)
