[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-human-dynamics-lab"
version = "0.1.0"
description = "A multimodal human state-space engine for modeling physiological, behavioral, and environmental dynamics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ceyhun Olcan", email = "ceyhun.olcan.27@dartmouth.edu" }]
keywords = [
    "computational-medicine",
    "state-space",
    "digital-biomarkers",
    "neural-ode",
    "passive-sensing",
    "climate-health",
    "counterfactual",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "typing-extensions>=4.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
ml = ["torch>=2.0"]
api = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "pydantic>=2.0"]
dashboard = ["streamlit>=1.28"]
all = [
    "torch>=2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "streamlit>=1.28",
    "pytest>=7.4",
]

[project.urls]
Repository = "https://github.com/ceyhunolcan/latent-human-dynamics-lab"
Issues = "https://github.com/ceyhunolcan/latent-human-dynamics-lab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
